[gd_scene load_steps=5 format=3 uid="uid://cs2y7pjd3ec63"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_s8lde"]
[ext_resource type="Script" uid="uid://c0d5udm4mtt7j" path="res://src/windows/settings_window.gd" id="2_721jg"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_iwex4"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_2y2o5"]

[node name="SettingsWindow" instance=ExtResource("1_s8lde")]
offset_right = 810.0
offset_bottom = 464.0
theme = ExtResource("2_iwex4")
script = ExtResource("2_721jg")
exclusive = true
panel_corner_radius = 0
panel_style_override = ExtResource("4_2y2o5")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Locations"

[node name="HSeparator" type="HSeparator" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "ROTH.RES"
horizontal_alignment = 2

[node name="RothResEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RothResButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="2"]
layout_mode = 2
text = "Browse"

[node name="RothResFileDialog" type="FileDialog" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/RothResButton" index="0"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Select ROTH.RES File"
initial_position = 2
size = Vector2i(754, 480)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("roth.res")
use_native_dialog = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Dosbox"
horizontal_alignment = 2

[node name="DosboxEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DosboxButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="2"]
layout_mode = 2
text = "Browse"

[node name="DosboxFileDialog" type="FileDialog" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/DosboxButton" index="0"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Select Dosbox Executable"
initial_position = 2
size = Vector2i(754, 480)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
use_native_dialog = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Dosbox Config"
horizontal_alignment = 2

[node name="DosboxConfigEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DosboxConfigButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3" index="2"]
layout_mode = 2
text = "Browse"

[node name="DosboxConfigFileDialog" type="FileDialog" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3/DosboxConfigButton" index="0"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Select Dosbox Config File"
initial_position = 2
size = Vector2i(754, 480)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.conf")
use_native_dialog = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="5"]
layout_mode = 2
size_flags_vertical = 10

[node name="ResetButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Save"

[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/RothResEdit" to="." method="_changed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/RothResButton" to="." method="_on_roth_res_button_pressed"]
[connection signal="file_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/RothResButton/RothResFileDialog" to="." method="_on_roth_res_file_dialog_file_selected"]
[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/DosboxEdit" to="." method="_changed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/DosboxButton" to="." method="_on_dosbox_button_pressed"]
[connection signal="file_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/DosboxButton/DosboxFileDialog" to="." method="_on_dosbox_file_dialog_file_selected"]
[connection signal="text_changed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3/DosboxConfigEdit" to="." method="_changed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3/DosboxConfigButton" to="." method="_on_dosbox_config_button_pressed"]
[connection signal="file_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer3/DosboxConfigButton/DosboxConfigFileDialog" to="." method="_on_dosbox_config_file_dialog_file_selected"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4/ResetButton" to="." method="_reset"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer4/SaveButton" to="." method="_save"]
